--- a/index.css
+++ b/index.css
@@ -1,11 +1,14 @@
+html,body {
+    text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -ms-text-size-adjust: none;
+  }
+
 .ScheduleTable {
     border-collapse: separate;
     border-spacing: 8px 0px;
     padding-left: 8px;
-}
-
-table{
-    font-size: 32px;
 }
 
 b#date {
