--- a/index.css
+++ b/index.css
@@ -3,13 +3,17 @@ html,body {
     -webkit-text-size-adjust: none;
     -moz-text-size-adjust: none;
     -ms-text-size-adjust: none;
-  }
+}
 
 .ScheduleTable {
     border-collapse: separate;
     border-spacing: 8px 0px;
     padding-left: 8px;
 }
+
+tbody {
+    -webkit-text-size-adjust: 100%;
+} 
 
 b#date {
     padding-left: 8px;
