--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body {
+body,td {
     font-size: 24px;
 }
 
@@ -9,7 +9,7 @@ body {
 }
 
 tbody {
-    -webkit-text-size-adjust: 150%;
+    -webkit-text-size-adjust: 100%;
 } 
 
 b#date {
